<resources>
    <string name="app_name">Mi Aplicacion</string>
    <string name="titulo">Registro de Personas</string>
    <string name="saludar">Mostrar</string>
    <string name="parte_saludo">Hola</string>
    <string name="nombre">Primer Nombre</string>
    <string name="apellido">Primer Apellido</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="parte_saludo2">Bienvenido a esta aplicacion!!!</string>
    <string name="error_1">Digite el Primer Nombre</string>
    <string name="error_3">Digite el Segundo Nombre</string>
    <string name="error_2">Digite el Primer Apellido</string>
    <string name="error_4">Digite el Segundo Apellido</string>
    <string name="error_5">Digite la  Edad</string>
    <string name="error_6">Digite el Sexo</string>
    <string name="Segundo_Nombre">Segundo Nombre</string>
    <string name="SegundoApellido">Segundo Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="edad">Edad</string>
    <string name="limpiar">Borrar</string>
    <string name="ParteS2">tu edad es</string>
    <string name="ParteS3">y tu sexo es</string>

</resources>
