<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.soporte.holamundo.Principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:text="@string/titulo"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:fontFamily="sans-serif"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtNombre"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:digits="qwertzuiopasdfghjklyxcvbnmñQWERTYUIOPASDFGHJKLZXCVBNMÑáéíóúàèìòùüÁÉÍÚÓÀÈÌÒÙÜ"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre2"
            android:hint="@string/Segundo_Nombre"
            android:digits="qwertzuiopasdfghjklyxcvbnñmÑQWERTYUIOPASDFGHJKLZXCVBNMáéíóúàèìòùüÁÉÍÚÓÀÈÌÒÙÜ"/>>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtapellido"
            android:hint="@string/apellido"
            android:digits="qwertzuiopasdfghjklyxcvbnñmÑQWERTYUIOPASDFGHJKLZXCVBNMáéíóúàèìòùüÁÉÍÚÓÀÈÌÒÙÜ"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellido2"
            android:hint="@string/SegundoApellido"
            android:digits="qwertzuiopasdfghjklyxcvbnñmQWERTYUIOPASDFGHJKLZXCVBNMáéíóúàèìòùüÁÉÍÚÓÀÈÌÒÙÜ"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtEdad"
            android:hint="@string/edad"
            android:inputType="number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtSexo"
            android:hint="@string/sexo"
            android:digits="qwertzuiopasdfghjklñyxcvbnñmÑQWERTYUIOPASDFGHJKLÑZXCVBNMáéíóúàèìòùüÁÉÍÚÓÀÈÌÒÙÜ"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:id="@+id/cmdBoton"
                android:text="@string/saludar"
                android:onClick="saludar"
                android:layout_weight="1" />

            <Button
                android:text="@string/limpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdLimpiar"
                android:onClick="limpiar"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
